--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -5,6 +5,7 @@ body {
 }
 *{
   box-sizing: border-box;
+  outline: none;
 }
 a {
   color: color(primary);
@@ -80,4 +81,15 @@ ul {
   width: 100%;
   background-color: rgba(0,0,0,.6);
   left: 0;
+}
+
+// slick Overwrite styles
+.slick-prev, .slick-next{
+  &:before{
+    display: none;
+  }
+  &:hover, &:focus{
+    background: #fff;
+  }
+  
 }
