--- a/css/layout/_margin.scss
+++ b/css/layout/_margin.scss
@@ -5,7 +5,7 @@
 // .m5p .mx5p .my5p .mt5p .mb5p .ml5p .mr5p - example classes for % margins
 
 // Pixels
-$margin-px: 0 2 3 4 5 6 7 8 9 10 12 15 20 25 28 30 35 40 45 50 55 60 65 70 75 80;
+$margin-px: 0 2 3 4 5 6 7 8 9 10 12 15 20 25 28 30 35 40 45 50 55 60 65 70 75 80 100;
 
 // Percents
 $margin-p: 5;
