--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@
 @import 'layout/padding';
 @import 'layout/width';
 @import 'layout/height';
+@import 'layout/zindex';
 
 @import 'components/buttons';
 @import 'components/forms';
