--- a/css/layout/_layout.scss
+++ b/css/layout/_layout.scss
@@ -33,7 +33,9 @@
 .w-100 {
   width: 100%;
 }
-
+.w-80p{
+  width: 80%;
+}
 .w-auto {
   width: auto;
 }
@@ -56,8 +58,14 @@
 .left-0{
   left:0;
 }
+.left-100{
+  left:100%;
+}
 .right-0{
   right: 0;
+}
+.right-100{
+  right:100%;
 }
 .top-0{
   top:0;
