--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -35,7 +35,9 @@ ul {
   margin: 0;
   list-style: none;
 }
-
+.uppercase{
+  text-transform: uppercase;
+}
 @media only screen and (min-width: 992px) {
   ::-webkit-scrollbar {
     width: 5px;
